@@ -32,7 +32,7 @@
 
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-junit5-internal</artifactId>
+            <artifactId>quarkus-junit-internal</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -53,8 +53,14 @@
                             <artifactId>quarkus-extension-processor</artifactId>
                         </path>
                     </annotationProcessorPaths>
+                    <release combine.self="override" />
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+    
 </project>
